Update Ruby target versions in Rubocop + Ruby 2.3
Rubocop has a new RubyTargetVersion param. By default it was checking
2.0, which we don't support (we use named params).

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,5 +3,9 @@ Documentation:
 Metrics/LineLength:
   Max: 140
 AllCops:
+  TargetRubyVersions:
+    - 2.1
+    - 2.2
+    - 2.3
   Exclude:
     - 'bin/*'
