Fix rubocop confix syntax, set minimum version

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,9 +3,6 @@ Documentation:
 Metrics/LineLength:
   Max: 140
 AllCops:
-  TargetRubyVersion:
-    - 2.1
-    - 2.2
-    - 2.3
+  TargetRubyVersion: 2.1
   Exclude:
     - 'bin/*'
